<resources>
    <string name="app_name">Platzi Test</string>
    <string name="app_icon_name">Harry Potter\nCharacters</string>
    <string name="title_home">Home</string>
    <string name="go_back">Go back</string>
    <string name="empty_text" />
    <string name="label_characters">Harry Potter Characters</string>
    <string name="label_name">Name</string>
    <string name="label_title">Title</string>
    <string name="other_names">Alias</string>
    <string name="favourite">favourite</string>
    <string name="label_date_of_birth">Date Of Birth</string>
    <string name="label_gender">Gender</string>
    <string name="label_status">Status</string>
    <string name="label_status_alive">Alive</string>
    <string name="label_status_dead">Dead</string>
    <string name="label_ancestry">Ancestry</string>
    <string name="label_patronus">Patronus</string>
    <string name="label_is_student">Is Hogwarts Student?</string>
    <string name="label_is_staff">Is Hogwarts Staff?</string>
    <string name="label_played_by">Played by</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>